--- a/scss/_modals.scss
+++ b/scss/_modals.scss
@@ -53,6 +53,7 @@
         padding-left: 30px;
         padding-right: 30px;
         line-height: 34px;
+        font-weight: 700;
     }
     &-body {
         &--main {
