--- a/scss/watchlist.scss
+++ b/scss/watchlist.scss
@@ -17,7 +17,10 @@
 }
 
 body {
-    background: $background;
+    background-color: $background;
+    /*background-image: url("/img/background.png");
+    background-attachment: fixed;
+    background-size: 400px;*/
     position: relative;
     width: 100vw;
     margin: 0;
@@ -37,6 +40,7 @@ body {
     margin-top: 65px;
     z-index: 1;
     flex: 1;
+    //background: $background;
 }
 
 h1 {
@@ -113,7 +117,7 @@ h1 {
             width: 260px;
             &--desc {
                 vertical-align: top;
-                color: $body;
+                color: $body-lt;
                 font-family: $nunito;
                 font-size: 16px;
                 font-weight: 400;
@@ -124,14 +128,14 @@ h1 {
                 white-space: normal;
                 margin-bottom: 2px;
                 a, span {
-                    color: $body;
+                    color: $body-lt;
                     font-weight: 700;
                     display: inline;
                     cursor: pointer;
                 }
             }
             &--quantity {
-                color: $caption-top;
+                color: $body;
                 font-family: $roboto;
                 font-size: 14px;
                 font-weight: 400;
@@ -352,7 +356,7 @@ h1 {
                     color: $blue;
                 }
             }
-            &--mark-cont:hover,&--mark-cont:focus, &--mark-cont:active {
+            &--mark-cont:focus, &--mark-cont:active {
                 background: $blue;
                 .show-button--mark {
                     background-image: url("/img/btn/check-hover.png");
@@ -379,7 +383,7 @@ h1 {
             &--watch-cont {
                 border-bottom-left-radius: 20px;
                 border-bottom-right-radius: 20px;
-                &:hover, &:focus, &:active {
+                &:focus, &:active {
                     background: $green;
                     .show-button--watch {
                         background-image: url("/img/btn/watch-hover.png");
@@ -524,7 +528,7 @@ h1 {
                     color: $blue;
                 }
             }
-            &--mark-cont:hover,&--mark-cont:focus, &--mark-cont:active {
+            &--mark-cont:focus, &--mark-cont:active {
                 background: $blue;
                 .movie-button--mark {
                     background-image: url("/img/btn/check-hover.png");
@@ -551,7 +555,7 @@ h1 {
             &--watch-cont {
                 border-bottom-left-radius: 20px;
                 border-bottom-right-radius: 20px;
-                &:hover, &:focus, &:active {
+                &:focus, &:active {
                     background: $green;
                     .movie-button--watch {
                         background-image: url("/img/btn/eye-hover.png");
@@ -593,7 +597,7 @@ h1 {
         cursor: pointer;
         @include transition-ease(.1s);
         @include no-select();
-        &:hover, &:focus, &:active {
+        &:focus, &:active {
             background: $red;
             .cta-section--btn--icon {
                 stroke: $white;
@@ -999,7 +1003,7 @@ h1 {
         margin-top: 110px;
     }
     h1 {
-        margin-top: 15px;
+        margin-top: 20px;
         font-size: 40px;
     }
     .friends-watching {
