--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -3,7 +3,10 @@
 @import "modals";
 
 body {
-    background: $background;
+    background-color: $background;
+    /*background-image: url("/img/background.png");
+    background-attachment: fixed;
+    background-size: 400px;*/
     position: relative;
     width: 100vw;
     margin: 0;
@@ -144,7 +147,7 @@ body {
                 margin-left: 30px;
                 width: 25px;
                 height: 25px;
-                background: url("/img/btn/back-dark.png");
+                background: url("/img/btn/back-light.png");
                 background-position: center;
                 background-repeat: no-repeat;
                 background-size: contain;
@@ -192,7 +195,7 @@ body {
     }
     &-caption {
         text-align: center;
-        color: $caption-top;
+        color: $body;
         font-family: $nunito;
         font-size: 18px;
         font-weight: 400;
@@ -201,14 +204,14 @@ body {
         margin-bottom: 5px;
         &--main {
             font-family: $metropolis;
-            color: $body;
+            color: $body-lt;
             font-weight: 500;
             font-size: 22px;
             line-height: 26px;
             margin-bottom: 15px;
         }
         &--sub {
-            color: $caption;
+            color: $caption-top;
             font-size: 16px;
             line-height: 20px;
             margin-bottom: 30px;
@@ -449,7 +452,7 @@ body {
                         display: block;
                         margin-left: 110px;
                         width: calc(100% - 210px);
-                        color: $caption;
+                        color: $caption-top;
                         font-size: 15px;
                         font-family: $nunito;
                         font-weight: 600;
@@ -558,7 +561,7 @@ body {
                 display: block;
                 margin-left: 110px;
                 width: calc(100% - 210px);
-                color: $caption;
+                color: $caption-top;
                 font-size: 15px;
                 font-family: $nunito;
                 font-weight: 600;
@@ -828,10 +831,18 @@ ul.see-all {
         background-position: bottom;
         background-size: contain;
         background-repeat: no-repeat;
-        border-bottom: 3px solid $bot-level;
+        &::after {
+            content: '';
+            position: absolute;
+            height: 3px;
+            width: 100%;
+            background: $top-level;
+            bottom: 0px;
+            left: 0px;
+        }
     }
     &--caption {
-        color: $mid-level;
+        color: $top-level;
         text-align: center;
         font-family: $nunito;
         margin-top: 25px;
@@ -846,7 +857,7 @@ ul.see-all {
         cursor: pointer;
         &--caption {
             display: inline-block;
-            color: $top-level;
+            color: $caption-top;
             text-align: center;
             font-family: $nunito;
             font-size: 16px;
@@ -1028,7 +1039,7 @@ ul.see-all {
                 margin-right: 5px;
             }
             &-type {
-                color: $top-level;
+                color: $caption-top;
                 font-family: $nunito;
                 font-size: 16px;
                 line-height: 16px;
@@ -1239,7 +1250,7 @@ ul.see-all {
             font-family: $nunito;
             font-size: 12px;
             line-height: 12px;
-            font-weight: 600;
+            font-weight: 700;
         }
     }
 }
@@ -1283,7 +1294,7 @@ ul.see-all {
                 margin-top: 3px;
                 margin-bottom: 10px;
                 display: block;
-                color: $caption;
+                color: $caption-top;
                 font-family: $nunito;
                 font-size: 14px;
                 line-height: 18px;
