--- a/scss/show.scss
+++ b/scss/show.scss
@@ -3,7 +3,10 @@
 @import "modals";
 
 body {
-    background: $background;
+    background-color: $background;
+    /*background-image: url("/img/background.png");
+    background-attachment: fixed;
+    background-size: 400px;*/
     position: relative;
     width: 100vw;
     margin: 0;
@@ -281,7 +284,7 @@ h4 {
             bottom: -7px;
             display: inline-block;
             float: right;
-            color: $top-level;
+            color: $caption-top;
             font-family: $nunito;
             font-size: 16px;
             line-height: 16px;
@@ -297,8 +300,8 @@ h4 {
                 position: absolute;
                 width: 8px;
                 height: 8px;
-                border-top: 2px solid $top-level;
-                border-right: 2px solid $top-level;
+                border-top: 2px solid $caption-top;
+                border-right: 2px solid $caption-top;
                 right: -4px;
                 bottom: 4px;
                 transform: translateX(100%) rotate(45deg);
@@ -359,7 +362,7 @@ ul.see-all {
                 display: inline-block;
             }
             &-type {
-                color: $top-level;
+                color: $caption-top;
                 font-family: $nunito;
                 font-size: 16px;
                 line-height: 25px;
@@ -403,7 +406,7 @@ ul.see-all {
     &-streaming {
         margin-bottom: 20px;
         &-title {
-            color: $top-level;
+            color: $caption;
             font-family: $nunito;
             font-size: 18px;
             line-height: 20px;
@@ -495,7 +498,7 @@ ul.see-all {
             position: relative;
             display: block;
             text-align: center;
-            color: $top-level;
+            color: $caption-top;
             font-family: $roboto;
             margin-top: 4px;
             font-size: 16px;
@@ -503,16 +506,13 @@ ul.see-all {
             font-weight: 400;
             @include transition-ease(0.25s);
         }
-        &:hover, &:focus, &:active {
+        &:focus, &:active {
             .friend-progress {
                 &--pic {
                     transform: scale(0.9);
                 }
                 &+ .friends-watching-item--name {
                     color: $white;
-                }
-                &~ .friends-watching-item--ep {
-                    color: $caption-top;
                 }
             }
         }
@@ -628,7 +628,7 @@ ul.see-all {
             &-number {
                 margin-bottom: 2px;
                 margin-left: 15px;
-                color: $caption-top;
+                color: $body;
                 font-family: $nunito;
                 font-size: 14px;
                 line-height: 18px;
@@ -792,7 +792,7 @@ ul.see-all {
         }
         &-name {
             white-space: normal;
-            color: $body;
+            color: $body-lt;
             font-family: $nunito;
             font-size: 15px;
             line-height: 17px;
@@ -814,7 +814,7 @@ ul.see-all {
         }
         &-role {
             white-space: normal;
-            color: $top-level;
+            color: $caption-top;
             font-family: $nunito;
             font-size: 15px;
             line-height: 17px;
@@ -882,7 +882,7 @@ ul.see-all {
             }
             &-user {
                 white-space: normal;
-                color: $body;
+                color: $body-lt;
                 font-family: $nunito;
                 font-size: 15px;
                 line-height: 20px;
@@ -895,7 +895,7 @@ ul.see-all {
             }
             &-rank {
                 white-space: normal;
-                color: $top-level;
+                color: $caption-top;
                 font-family: $nunito;
                 font-size: 15px;
                 line-height: 20px;
