--- a/scss/upcoming.scss
+++ b/scss/upcoming.scss
@@ -23,7 +23,10 @@ ul {
 }
 
 body {
-    background: $background;
+    background-color: $background;
+    /*background-image: url("/img/background.png");
+    background-attachment: fixed;
+    background-size: 400px;*/
     position: relative;
     width: 100vw;
     margin: 0;
@@ -170,7 +173,7 @@ h1 {
         margin-top: 110px;
     }
     h1 {
-        margin-top: 15px;
+        margin-top: 20px;
         font-size: 40px;
     }
 }
