--- a/css/profile.css
+++ b/css/profile.css
@@ -1,3 +1,120 @@
+.empty {
+  margin-top: 20px;
+  position: relative;
+  width: 100%;
+  white-space: normal;
+}
+
+.empty--image {
+  position: relative;
+  width: 100%;
+  height: 300px;
+  background-image: url("/img/defaults/empty.png");
+  background-position: bottom;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.empty--image::after {
+  content: '';
+  position: absolute;
+  height: 3px;
+  width: 100%;
+  background: #334256;
+  bottom: 0px;
+  left: 0px;
+}
+
+.empty--caption {
+  color: #334256;
+  text-align: center;
+  font-family: "Nunito", sans-serif;
+  margin-top: 25px;
+  font-size: 25px;
+  line-height: 30px;
+  font-weight: 700;
+}
+
+.empty--action {
+  margin-top: 3px;
+  margin-bottom: 10px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.empty--action--caption {
+  display: inline-block;
+  color: #576777;
+  text-align: center;
+  font-family: "Nunito", sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 600;
+  margin-right: 3px;
+}
+
+.empty--action--arrow {
+  display: inline-block;
+  height: 12px;
+  width: 20px;
+  background-image: url("/img/arrow-left.png");
+  background-position: bottom;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+@media (max-width: 1500px) {
+  .empty {
+    width: calc(100% - 50px);
+  }
+}
+
+@media (max-width: 750px) {
+  .empty--image {
+    height: 200px;
+  }
+}
+
+@media (max-width: 525px) {
+  .empty {
+    width: calc(100% - 30px);
+  }
+  .empty--image {
+    height: 150px;
+  }
+}
+
+@media (max-width: 425px) {
+  .empty {
+    width: calc(100% - 20px);
+  }
+}
+
+@media (max-width: 375px) {
+  .empty--caption {
+    margin-top: 15px;
+    font-size: 22px;
+    line-height: 26px;
+  }
+  .empty--action--caption {
+    font-size: 14px;
+    line-height: 17px;
+    margin-right: 2px;
+  }
+  .empty--action--arrow {
+    height: 9px;
+    width: 17px;
+  }
+}
+
+@media (max-width: 350px) {
+  .empty--caption {
+    margin-top: 15px;
+    font-size: 19px;
+    line-height: 23px;
+  }
+}
+
 .profile-section--hidden {
   opacity: 0;
   transform: translateY(20px);
@@ -586,10 +703,6 @@ body {
   height: 10px;
 }
 
-#overlay--challenge .overlay-back {
-  background: #ffdd6b;
-}
-
 #overlay--challenge .overlay-back::before {
   background: #ffdd6b;
 }
@@ -1151,70 +1264,6 @@ ul {
 ul.see-all {
   white-space: normal;
   overflow: visible;
-}
-
-.empty {
-  margin-top: 20px;
-  position: relative;
-  width: 100%;
-}
-
-.empty--image {
-  position: relative;
-  width: 100%;
-  height: 300px;
-  background-image: url("/img/defaults/empty.png");
-  background-position: bottom;
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-
-.empty--image::after {
-  content: '';
-  position: absolute;
-  height: 3px;
-  width: 100%;
-  background: #334256;
-  bottom: 0px;
-  left: 0px;
-}
-
-.empty--caption {
-  color: #334256;
-  text-align: center;
-  font-family: "Nunito", sans-serif;
-  margin-top: 25px;
-  font-size: 25px;
-  line-height: 30px;
-  font-weight: 700;
-}
-
-.empty--action {
-  margin-top: 3px;
-  margin-bottom: 10px;
-  text-align: center;
-  cursor: pointer;
-}
-
-.empty--action--caption {
-  display: inline-block;
-  color: #576777;
-  text-align: center;
-  font-family: "Nunito", sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 600;
-  margin-right: 3px;
-}
-
-.empty--action--arrow {
-  display: inline-block;
-  height: 12px;
-  width: 20px;
-  background-image: url("/img/arrow-left.png");
-  background-position: bottom;
-  background-size: contain;
-  background-repeat: no-repeat;
 }
 
 .hero {
@@ -2134,9 +2183,6 @@ ul.see-all {
   .hero .profile-header {
     left: 50px;
   }
-  .empty {
-    width: calc(100% - 50px);
-  }
 }
 
 @media (max-width: 1280px) {
@@ -2171,9 +2217,6 @@ ul.see-all {
     font-size: 18px;
     line-height: 18px;
   }
-  .empty--image {
-    height: 200px;
-  }
 }
 
 @media (max-width: 525px) {
@@ -2203,12 +2246,6 @@ ul.see-all {
   }
   .section {
     padding-left: 30px;
-  }
-  .empty {
-    width: calc(100% - 30px);
-  }
-  .empty--image {
-    height: 150px;
   }
 }
 
@@ -2251,9 +2288,6 @@ ul.see-all {
     font-size: 16px;
     line-height: 16px;
   }
-  .empty {
-    width: calc(100% - 20px);
-  }
 }
 
 @media (max-width: 400px) {
@@ -2294,23 +2328,6 @@ ul.see-all {
   .profile-actions-list .profile-actions-item--textonly::before {
     width: 0px;
     height: 0px;
-  }
-}
-
-@media (max-width: 375px) {
-  .empty--caption {
-    margin-top: 15px;
-    font-size: 22px;
-    line-height: 26px;
-  }
-  .empty--action--caption {
-    font-size: 14px;
-    line-height: 17px;
-    margin-right: 2px;
-  }
-  .empty--action--arrow {
-    height: 9px;
-    width: 17px;
   }
 }
 
@@ -2386,10 +2403,5 @@ ul.see-all {
   .profile-actions-list .profile-actions-item--textonly::before {
     width: 0px;
     height: 0px;
-  }
-  .empty--caption {
-    margin-top: 15px;
-    font-size: 19px;
-    line-height: 23px;
   }
 }
