--- a/scss/_var.scss
+++ b/scss/_var.scss
@@ -56,3 +56,123 @@ $roboto: "Roboto", sans-serif;
         background: transparent;  /* optional: just make scrollbar invisible */
     }
 }
+
+.empty {
+    margin-top: 20px;
+    position: relative;
+    width: 100%;
+    white-space: normal;
+    &--image {
+        position: relative;
+        width: 100%;
+        height: 300px;
+        background-image: url("/img/defaults/empty.png");
+        background-position: bottom;
+        background-size: contain;
+        background-repeat: no-repeat;
+        &::after {
+            content: '';
+            position: absolute;
+            height: 3px;
+            width: 100%;
+            background: $top-level;
+            bottom: 0px;
+            left: 0px;
+        }
+    }
+    &--caption {
+        color: $top-level;
+        text-align: center;
+        font-family: $nunito;
+        margin-top: 25px;
+        font-size: 25px;
+        line-height: 30px;
+        font-weight: 700;
+    }
+    &--action {
+        margin-top: 3px;
+        margin-bottom: 10px;
+        text-align: center;
+        cursor: pointer;
+        &--caption {
+            display: inline-block;
+            color: $caption-top;
+            text-align: center;
+            font-family: $nunito;
+            font-size: 16px;
+            line-height: 20px;
+            font-weight: 600;
+            margin-right: 3px;
+        }
+        &--arrow {
+            display: inline-block;
+            height: 12px;
+            width: 20px;
+            background-image: url("/img/arrow-left.png");
+            background-position: bottom;
+            background-size: contain;
+            background-repeat: no-repeat;
+        }
+    }
+}
+
+@media (max-width: 1500px) {
+    .empty {
+        width: calc(100% - 50px);
+    }
+}
+
+@media (max-width: 750px) {
+    .empty {
+        &--image {
+            height: 200px;
+        }
+    }
+}
+
+@media (max-width: 525px) {
+    .empty {
+        width: calc(100% - 30px);
+        &--image {
+            height: 150px;
+        }
+    }
+}
+
+@media (max-width: 425px) {
+    .empty {
+        width: calc(100% - 20px);
+    }
+}
+
+
+@media (max-width: 375px) {
+    .empty {
+        &--caption {
+            margin-top: 15px;
+            font-size: 22px;
+            line-height: 26px;
+        }
+        &--action {
+            &--caption {
+                font-size: 14px;
+                line-height: 17px;
+                margin-right: 2px;
+            }
+            &--arrow {
+                height: 9px;
+                width: 17px;
+            }
+        }
+    }
+}
+
+@media (max-width: 350px) {
+    .empty {
+        &--caption {
+            margin-top: 15px;
+            font-size: 19px;
+            line-height: 23px;
+        }
+    }
+}
