--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -73,7 +73,7 @@ body {
         transform: translateX(-50%);
         width: 100%;
         height: 60px;
-        background: $caption;
+        background: rgba(34, 44, 58, 0.3);
         z-index: 3;
         @include transition-ease(0.25s);
         &--hidden {
@@ -100,7 +100,7 @@ body {
             &-type {
                 position: relative;
                 top: 1px;
-                color: $bot-level;
+                color: $yellow;
                 display: inline-block;
                 font-family: $nunito;
                 font-weight: 700;
@@ -249,15 +249,6 @@ body {
 }
 
 #overlay--challenge {
-    .overlay-back {
-        //background: $yellow;
-        &::before {
-            background: $yellow;
-        }
-        &::after {
-            background: $yellow;
-        }
-    }
     .overlay-img {
         background-image: url("/img/illus/challenge.png");
     }
